# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("ark_js_moduletest") {
  testonly = true

  test_list = [
    "addelementinternal",
    "addpropertybyname",
    "allocatearraybuffer",
    "array",
    "arrayfindlast",
    "arrayflat",
    "arrayflatmap",
    "arrayfindindex",
    "arrayfindlastindex",
    "arrayforeach",
    "arrayfrom",
    "arrayjoin",
    "arraymap",
    "arraypop",
    "arraytoreversed",
    "arraytospliced",
    "arraywith",
    "arraysort",
    "arrayspread",
    "arrayprotochange",
    "arrayshift",
    "arrayslice",
    "arraysplice",
    "arktoolshavesamemap",
    "assignproxy",
    "async",
    "asyncgenerator",
    "bigint",
    "bindfunction",
    "bitwiseop",
    "builtins",
    "callframe",
    "calltype",
    "class",
    "compareobjecthclass",
    "concurrent",
    "container",
    "createarray",
    "dataproperty",
    "datecase",
    "datecompare",
    "dateparse",
    "decodeuricomponent",
    "definefunc",
    "deleteobjproperty",
    "div",
    "dynamicimport",
    "dyninstruction",
    "ecmastringtable",
    "equal",
    "errorhelper",
    "errorcause",
    "flatten",
    "forawaitof",
    "forin",
    "forin_delete_property",
    "forin_dictionary_mode",
    "forin_empty_prototype",
    "forin_enum_cache",
    "forin_non_empty_prototype",
    "forin_primitive",
    "forin_special_object",
    "fortest",
    "funcprotochangeobjectandnew",
    "functionapply",
    "generator",
    "getpropertybyindex",
    "getunmappedargs",
    "global",
    "globalaccessor",
    "globalrecord",
    "globalthis",
    "helloworld",
    "instanceofic",
    "intl",
    "jsonparser",
    "jsonstringifier",
    "ldmodulensbyic",
    "lexicalenv",
    "linkedhashtable",
    "loadicbyname",
    "loadicbyvalue",
    "localelowercase",
    "memleakobjectcreate",
    "merge",
    "module",
    "moduleImportJson",
    "moduleUseCjs",
    "multiargs",
    "multiprotoic",
    "negintmin",
    "newobjdynrange",
    "objectcloneproperties",
    "objectdefineproperties",
    "objectgetownproperty",
    "objecthasownproperty",
    "objectkeys",
    "objoperate",
    "objseal",
    "promise",
    "propertydetector",
    "protobuf",
    "proxy",
    "regressproxy",
    "rangeerror",
    "regexpcallthrow",
    "regexpflagd",
    "regexpmaxindex",
    "regress",

    #"regressdatetime",
    "regressdefineproperty",
    "regresssstring",
    "require",
    "setobjectwithproto",
    "spreadoperator",
    "stackoverflow",
    "storeicbyname",
    "storeicbyvalue",
    "string",
    "stringfromcharcode",
    "stringreplace",
    "stringsplit",
    "stubbuilder",
    "throwdyn",
    "throwerror",
    "trycatch",
    "typearray",
    "typedarrayat",
    "typedarrayfindlast",
    "typedarrayfrom",
    "typedarraynan",
    "typedarraysort",
    "typedarraysubarray",
    "typedarraytosorted",
    "typedarraywith",
    "watch",
    "weakcollectionswithsymbol",
    "wrapperclassfunc",
    "yieldstar",
    "esmnestedimportcjs",
    "regexp",
    "deregistermodule",
    "getpropertybyic",
    "regressbufferdetach",
    "regressdate",
    "regresssuper",
    "objectfreeze",
    "sharedcheck",
    "definesendableclass",
    "sendablecontext",
  ]

  deps = []
  foreach(test, test_list) {
    deps += [ "${test}:${test}Action" ]
    if (!is_debug) {
      deps += [ "${test}:${test}ContextAction" ]
    }
  }

  if (!is_debug) {
    release_test_list = [
      "hugearray",
      "multiconstpoolarray",
      "multiconstpoolclass",
      "multiconstpoolconstructor",
      "multiconstpoolfunc",
      "multiconstpoolobj",
    ]

    foreach(test, release_test_list) {
      deps += [
        "${test}:${test}Action",
        "${test}:${test}ContextAction",
      ]
    }
  }
}

group("ark_asm_test") {
  testonly = true

  test_list = [
    "addelementinternal",
    "addpropertybyname",
    "allocatearraybuffer",
    "allocatesizeoverflow",
    "array",
    "arrayfindlast",
    "arrayflat",
    "arrayflatmap",
    "arrayfindlastindex",
    "arrayfindindex",
    "arrayforeach",
    "arrayjoin",
    "arraymap",
    "arraypop",
    "arraysort",
    "arrayspread",
    "arrayprotochange",
    "arrayshift",
    "arrayslice",
    "asmstackoverflow",
    "assignproxy",
    "async",
    "bigint",
    "bindfunction",
    "bitwiseop",
    "builtins",
    "callframe",
    "calltype",
    "class",
    "compareobjecthclass",
    "concurrent",
    "container",
    "dataproperty",
    "dateparse",
    "datetimezone",

    # "datetimezonetitleid",
    "decodeuricomponent",
    "definefunc",
    "deleteobjproperty",
    "div",
    "dynamicimport",
    "dyninstruction",
    "ecmastringtable",
    "elements_kind",
    "equal",
    "errorcause",
    "flatten",
    "forin",
    "forin_delete_property",
    "forin_dictionary_mode",
    "forin_empty_prototype",
    "forin_enum_cache",
    "forin_non_empty_prototype",
    "forin_primitive",
    "forin_special_object",
    "fortest",
    "funcprotochangeobjectandnew",
    "functionapply",
    "generator",
    "getunmappedargs",
    "global",
    "globalaccessor",
    "globalrecord",
    "globalthis",
    "helloworld",
    "ictest",
    "instanceofic",
    "intl",
    "jsonparser",
    "jsonstringifier",
    "ldmodulensbyic",
    "lexicalenv",
    "linkedhashtable",
    "loadicbyvalue",
    "module",
    "multiargs",
    "multiprotoic",
    "negintmin",
    "newobjdynrange",
    "objectcloneproperties",
    "objecthasownproperty",
    "objectkeys",
    "objoperate",
    "objseal",
    "promise",
    "propertydetector",
    "proxy",
    "rangeerror",
    "regexpcallthrow",
    "regexpflagd",
    "regressparseInt",
    "setobjectwithproto",
    "spreadoperator",
    "stackoverflow",
    "stringreplace",
    "stringrepeat",
    "stringsplit",
    "stubbuilder",
    "throwdyn",
    "throwerror",
    "trycatch",
    "typedarrayat",
    "typedarrayfindlast",
    "typedarrayfrom",
    "typedarraynan",
    "typedarraysort",
    "typedarraytosorted",
    "typedarraywith",
    "watch",
    "weakcollectionswithsymbol",
    "wrapperclassfunc",
    "yieldstar",
    "regexp",
    "deregistermodule",
    "getpropertybyic",
    "sharedcheck",
    "definesendableclass",
    "sendablecontext",
  ]

  deps = []
  foreach(test, test_list) {
    deps += [ "${test}:${test}AsmAction" ]
    if (!is_debug) {
      deps += [ "${test}:${test}AsmContextAction" ]
    }
  }

  if (!is_debug) {
    release_test_list = [
      "hugearray",
      "multiconstpoolarray",
      "multiconstpoolclass",
      "multiconstpoolconstructor",
      "multiconstpoolfunc",
      "multiconstpoolobj",
    ]

    foreach(test, release_test_list) {
      deps += [
        "${test}:${test}AsmAction",
        "${test}:${test}AsmContextAction",
      ]
    }
  }
}

group("ark_asm_single_step_test") {
  testonly = true

  test_list = [
    "addelementinternal",
    "addpropertybyname",
    "allocatearraybuffer",
    "allocatesizeoverflow",
    "arrayfindindex",
    "arrayfindlast",
    "arrayflat",
    "arrayflatmap",
    "arrayfindlastindex",
    "arrayforeach",
    "arrayjoin",
    "arraymap",
    "arraypop",
    "arrayprotochange",
    "arrayshift",
    "arrayslice",
    "arrayspread",
    "asmstackoverflow",
    "assignproxy",
    "async",
    "bigint",
    "bindfunction",
    "bitwiseop",
    "callframe",
    "calltype",
    "class",
    "compareobjecthclass",
    "concurrent",
    "container",
    "dataproperty",
    "dynamicimport",
    "dyninstruction",
    "ecmastringtable",
    "errorcause",
    "forin",
    "forin_delete_property",
    "forin_dictionary_mode",
    "forin_empty_prototype",
    "forin_enum_cache",
    "forin_non_empty_prototype",
    "forin_primitive",
    "forin_special_object",
    "fortest",
    "funcprotochangeobjectandnew",
    "functionapply",
    "generator",
    "getunmappedargs",
    "global",
    "globalaccessor",
    "globalrecord",
    "globalthis",
    "helloworld",
    "instanceofic",
    "jsonparser",
    "jsonstringifier",
    "ldmodulensbyic",
    "lexicalenv",
    "loadicbyvalue",
    "module",
    "multiargs",
    "multiprotoic",
    "negintmin",
    "newobjdynrange",
    "objectcloneproperties",
    "objecthasownproperty",
    "objectkeys",
    "objoperate",
    "objseal",
    "promise",
    "propertydetector",
    "proxy",
    "rangeerror",
    "regexpcallthrow",
    "regexpflagd",
    "setobjectwithproto",
    "spreadoperator",
    "stackoverflow",
    "stringreplace",
    "stringsplit",
    "stubbuilder",
    "throwdyn",
    "throwerror",
    "trycatch",
    "typedarrayat",
    "typedarrayfindlast",
    "typedarrayfrom",
    "typedarraynan",
    "typedarraysort",
    "typedarraytosorted",
    "typedarraywith",
    "watch",
    "weakcollectionswithsymbol",
    "yieldstar",
    "getpropertybyic",
    "regressarraybuffer",
    "sharedcheck",
    "definesendableclass",
    "sendablecontext",
  ]

  deps = []
  foreach(test, test_list) {
    deps += [ "${test}:${test}AsmSingleStepAction" ]
    if (!is_debug) {
      deps += [ "${test}:${test}AsmSingleStepContextAction" ]
    }
  }

  if (!is_debug) {
    release_test_list = [
      "multiconstpoolarray",
      "multiconstpoolclass",
      "multiconstpoolconstructor",
      "multiconstpoolfunc",
      "multiconstpoolobj",
    ]

    foreach(test, release_test_list) {
      deps += [
        "${test}:${test}AsmSingleStepAction",
        "${test}:${test}AsmSingleStepContextAction",
      ]
    }
  }
}
