# Copyright (c) 2021-2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//arkcompiler/ets_runtime/js_runtime_config.gni")

module_test_list = [
  "allocatearraybuffer",
  "arraypushproto",
  "arraySome",
  "arrayEvery",
  "arrayspeciescreate",
  "arrayspliceproto",
  "arrayunshiftproto",
  "arrayfind",
  "arrayflat",
  "arrayflatmap",
  "arrayfindindex",
  "arrayfindlastindex",
  "arrayforeach",
  "arraymap",
  "getiterator",
  "arraypop",
  "arraytoreversed",
  "arraywith",
  "arraystablecheck",
  "arraysort",
  "arrayspread",
  "arrayprotochange",
  "arrayshift",
  "arrayslice",
  "arraysplice",
  "arktoolshavesamemap",
  "assignproxy",
  "asyncgenerator",
  "asyncUseLazyValue",
  "barrier",
  "bigint",
  "bindfunction",
  "bitwiseop",
  "builtins",
  "call",
  "callframe",
  "calltype",
  "changelistener",
  "changelistener2",
  "class",
  "clampedarray",
  "compareobjecthclass",
  "concurrent",
  "container",
  "createarray",
  "createobject",
  "custompromise",
  "dataproperty",
  "datecase",
  "datecompare",
  "dateparse",
  "datetimezone",
  "definefield",
  "definefunc",
  "definemethod",
  "deleteobjproperty",
  "div",
  "dynamicimport",
  "dynamicimportcontext",
  "dyninstruction",
  "ecmastringtable",
  "internstring",
  "equal",
  "errorhelper",
  "errorcause",
  "exp",
  "flatten",
  "forawaitof",
  "forin",
  "forin_delete_property",
  "forin_dictionary_mode",
  "forin_empty_prototype",
  "forin_enum_cache",
  "forin_enum_cache_chain",
  "forin_non_empty_prototype",
  "forin_primitive",
  "forin_special_object",
  "fortest",
  "funcprotochangeobjectandnew",
  "functionapply",
  "generator",
  "getdeletedelementsat",
  "getunmappedargs",
  "global",
  "globalaccessor",
  "globalrecord",
  "globalthis",
  "helloworld",
  "ictest",
  "includesindexof",
  "inline_property",
  "inline_property_literal",
  "instanceofic",
  "intl",
  "memleakobjectcreate",
  "merge",
  "module",
  "moduleHandleException",
  "moduleImportJson",
  "moduleLazyImport",
  "moduleTopLevelAwait",
  "moduleUseCjs",
  "multiargs",
  "multiprotoic",
  "negintmin",
  "newobjdynrange",
  "newtaggedsubarray",
  "nextinternalslowpath",
  "object",
  "typedarraymapoverflow",
  "objectcloneproperties",
  "objectdefineproperties",
  "objectentries",
  "objectgetownproperty",
  "objecthasownproperty",
  "objectkeys",
  "objoperate",
  "objseal",
  "promise",
  "promiseUseLazyValue",
  "promiseUseLazyValueInDynamic",
  "propertydetector",

  #"protobuf",
  "proxy",
  "realm",
  "regressproxy",
  "rangeerror",
  "regexpcallthrow",
  "regexpflagd",
  "regressfunction",
  "regexpmaxindex",
  "regress",
  "regressparseInt",
  "regressmathmaxmin",

  "string",
  "stringlocalecompare",
  "stringrepeat",
  "sharedcheck",
  "sharedarray",
  "shareduse",
  "enum_cache_sendable",
  "sharedtypedarray",
  "sharedcollectionsexception",
  "definesendableclass",
  "sendableenv",
  "sendablefunc",
  "sendablecontext",
  "sendableclassuseimport",
  "sharedmodule",
  "sharedset",
  "sharedset_extern",
  "sharedmap",
  "sharedJSON",
  "sharedic",
  "sendable",
  "sendablearray",
  "sharedobjectstorebarrier_treestring",

  "weakmap",
  "weakmap_complex_scenarios",
]

if (enable_latest_optimization) {
  module_test_list += [
    "string_wrapper_class_extends_toprimitive",
    "string_wrapper_class_middle_proto_toprimitive",
    "string_wrapper_class_proto_toprimitive",
    "string_wrapper_class_prototype_toprimitive",
    "string_wrapper_defineproperty_instance_toprimitive",
    "string_wrapper_defineproperty_object_prototype_toprimitive",
    "string_wrapper_defineproperty_prototype_toprimitive",
    "string_wrapper_defineproperty_prototype_valueof",
    "string_wrapper_defineproperty_instance_valueof",
    "string_wrapper_delete_valueof",
    "string_wrapper_function_chain_toprimitive",
    "string_wrapper_function_constructor_toprimitive",
    "string_wrapper_instance_toprimitive",
    "string_wrapper_instance_toprimitive_assign",
    "string_wrapper_instance_valueof",
    "string_wrapper_multilevel_class_prototype_toprimitive",
    "string_wrapper_multilevel_class_toprimitive",
    "string_wrapper_object_prototype_toprimitive",
    "string_wrapper_prototype_toprimitive",
    "string_wrapper_prototype_valueof",
    "string_wrapper_reflect_construct_function_toprimitive",
    "string_wrapper_reflect_construct_newtarget_toprimitive",
    "string_wrapper_reflect_construct_no_newtarget_toprimitive",
    "string_wrapper_reflect_construct_optimized_toprimitive",
    "string_wrapper_reflect_construct_warmup_toprimitive",
    "string_wrapper_set_proto_toprimitive",
    "string_wrapper_set_proto_valueof",
    "string_wrapper_string_prototype_proto_toprimitive",
    "string_wrapper_unrelated_class_toprimitive",
  ]
}

# TODO: CMC-GC UT FIX LATER
if (ets_runtime_enable_cmc_gc) {
  module_test_list -= [
    "allocatearraybuffer",
    "builtins",
    "object",
  ]
}

group("ark_js_moduletest") {
  testonly = true
  test_list = module_test_list
  test_list += [ "async" ]  # asm interpreter run too long
  deps = []
  foreach(test, test_list) {
    deps += [ "${test}:${test}Action" ]
    if (!is_debug) {
      deps += [ "${test}:${test}ContextAction" ]
    }
  }

  if (!is_debug) {
    release_test_list = [ "typedarrayrelease" ]

    foreach(test, release_test_list) {
      deps += [
        "${test}:${test}Action",
        "${test}:${test}ContextAction",
      ]
    }
  }
}

group("ark_js_assert_moduletest") {
  testonly = true
  assert_test_list = [
    "getpropertybyindex",
    "addelementinternal",
    "arktoolsgetundetectable",
    "arrayfill",
    "array",
    "arrayconcat",
    "arrayconstructor",
    "arrayderived",
    "arrayfillproto",
    "arrayFilterCase",
    "arrayfindlast",
    "arrayfrom",
    "arrayjoin",
    "arraytospliced",
    "atomics",
    "addpropertybyname",
    "cowarray",
    "decodeuricomponent",
    "externalstring",
    "isin",
    "jsonparser",
    "jsonstringifier",
    "jsonstringifier2",
    "ldmodulensbyic",
    "lexicalenv",
    "arrch64stackoverflow",
    "linkedhashtable",
    "loadicbyname",
    "loadicbyvalue",
    "localelowercase",
    "mapforeach",
    "mapget",
    "nanhash",
    "obj_dictionarymode",
    "object_assign",
    "proxy2",
    "regressdefineproperty",
    "regresssstring",
    "require",
    "setconstructor",
    "setobjectwithproto",
    "spreadoperator",
    "stackoverflow",
    "storeglobalvarIC",
    "storeicbyname",
    "storeicbyvalue",
    "stringfromcharcode",
    "stringindexof",
    "stringreplace",
    "stringreplaceall",
    "stringsplit",
    "stubbuilder",
    "stable_hclass",
    "throwdyn",
    "throwerror",
    "trycatch",
    "typearray",
    "typedarrayat",
    "typedarrayfill",
    "typedarrayfilter",
    "typedarrayfindlast",
    "typedarrayfrom",
    "displaynames",
    #"typedarrayfrom_in_api14",
    "typedarrayiterator",
    "typedarraymap",
    "typedarraynan",
    "typedarrayreverse",
    "typedarraysort",
    "typedarraysubarray",
    "typedarraytosorted",
    "typedarraywith",
    "typedarrayjoin",
    "watch",
    "reflectownkeys",
    "weakcollectionswithsymbol",
    "wrapperclassfunc",
    "yieldstar",
    "esmnestedimportcjs",
    "regexp",
    "regexp2",
    "regexpwordchar",
    "regexpcache",
    "regexpunicode",
    "deregistermodule",
    "getpropertybyic",
    "regressbufferdetach",
    "regressdate",
    "regresssuper",
    "objectfreeze",
    "getvaluefrombuffer",
    "getregexpcachecount",
    "cppcallirbuiltins",
    "functionbind",
  ]

  if (enable_next_optimization) {
    assert_test_list += ["jsonstringifier_optimized"]
  }

  deps = []
  foreach(test, assert_test_list) {
    deps += [ "${test}:${test}AssertAction" ]
    if (ark_standalone_build && host_os == "linux" && target_os == "ohos") {
      deps += [ "${test}:${test}ActionWithQemu" ]
    }
    if (!is_debug) {
      deps += [ "${test}:${test}ContextAssertAction" ]
    }
  }

  if (!is_debug) {
    release_test_assert_list = [
      "hugearray",
      "hugeictest",
      "multiconstpoolarray",
      "multiconstpoolclass",
      "multiconstpoolconstructor",
      "multiconstpoolfunc",
      "multiconstpoolobj",
      "proxyget",
      "proxyrelease",
      "proxyset",
      "typedarray2",
    ]

    foreach(test, release_test_assert_list) {
      deps += [
        "${test}:${test}AssertAction",
        "${test}:${test}ContextAssertAction",
      ]
    }
  }
}

group("ark_asm_test") {
  testonly = true
  test_list = module_test_list
  test_list += [
    "arrayincludesindexof",  # C interpreter do not support elementskind.
    "elements_kind",  # C interpreter do not support elementskind.
    "allocatesizeoverflow",  # different bound check for C and ASM interpreter
  ]

  deps = []
  foreach(test, test_list) {
    deps += [ "${test}:${test}AsmAction" ]
    if (!is_debug) {
      deps += [ "${test}:${test}AsmContextAction" ]
    }
  }

  if (!is_debug) {
    release_test_list = [
      "throwerrorrelease",
      "typedarrayrelease",
    ]

    foreach(test, release_test_list) {
      deps += [
        "${test}:${test}AsmAction",
        "${test}:${test}AsmContextAction",
      ]
    }
  }
}

group("ark_asm_assert_test") {
  testonly = true
  assert_test_list = [
    "getpropertybyindex",
    "addelementinternal",
    "arktoolsgetundetectable",
    "arrayfill",
    "array",
    "arrayconcat",
    "arrayconstructor",
    "arrayderived",
    "arrayfillproto",
    "arrayFilterCase",
    "arrayfindlast",
    "arrayfrom",
    "arrayjoin",
    "atomics",
    "addpropertybyname",
    "cowarray",
    "decodeuricomponent",
    "externalstring",
    "isin",
    "jsonparser",
    "jsonstringifier",
    "jsonstringifier2",
    "ldmodulensbyic",
    "lexicalenv",
    "linkedhashtable",
    "loadicbyvalue",
    "mapforeach",
    "mapget",
    "nanhash",
    "obj_dictionarymode",
    "object_assign",
    "setconstructor",
    "setobjectwithproto",
    "spreadoperator",
    "stackoverflow",
    "stringindexof",
    "stringreplace",
    "stringreplaceall",
    "stringsplit",
    "stubbuilder",
    "throwdyn",
    "throwerror",
    "trycatch",
    "typearray",
    "arraytospliced",
    "typedarrayat",
    "typedarrayfill",
    "typedarrayfilter",
    "typedarrayfindlast",
    "typedarrayfrom",
    "displaynames",
    #"typedarrayfrom_in_api14",
    "typedarrayiterator",
    "typedarraymap",
    "typedarraynan",
    "typedarrayreverse",
    "typedarraysort",
    "typedarraytosorted",
    "typedarraywith",
    "watch",
    "reflectownkeys",
    "weakcollectionswithsymbol",
    "wrapperclassfunc",
    "yieldstar",
    "regexp",
    "regexp2",
    "regexpunicode",
    "regexpwordchar",
    "deregistermodule",
    "getpropertybyic",
    "getvaluefrombuffer",
    "getregexpcachecount",
    "cppcallirbuiltins",
    "functionbind",
  ]

  if (enable_latest_optimization) {
    assert_test_list += ["jsonstringifier_optimized"]
  }

  deps = []

  foreach(test, assert_test_list) {
    deps += [ "${test}:${test}AsmAssertAction" ]
    if (!is_debug) {
      deps += [ "${test}:${test}AsmContextAssertAction" ]
    }
  }

  if (!is_debug) {
    release_test_assert_list = [
      "asmstackoverflow",
      "arrayRelease",
      "hugearray",
      "hugeictest",
      "supercallRelease",
      "multiconstpoolarray",
      "multiconstpoolclass",
      "multiconstpoolconstructor",
      "multiconstpoolfunc",
      "multiconstpoolobj",
      "proxyget",
      "proxyrelease",
      "proxyset",
      "Releasebindfunction",
      "releaseRegexp",
      "releaseAddProperty",
    ]

    # TODO: CMC-GC UT FIX LATER
    if (ets_runtime_enable_cmc_gc) {
      release_test_assert_list -= [ "hugearray" ]
    }

    foreach(test, release_test_assert_list) {
      deps += [
        "${test}:${test}AsmAssertAction",
        "${test}:${test}AsmContextAssertAction",
      ]
    }
  }
}
